<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/title_pad"
        android:paddingRight="@dimen/title_pad">

        <ImageView
            android:layout_width="@dimen/mine_list_img_size"
            android:layout_height="wrap_content"
            android:src="@mipmap/left_arrow" />

        <TextView
            android:id="@+id/open_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/chos_bind_title"
            android:textSize="@dimen/title_txt_size" />

        <ImageView
            android:layout_width="@dimen/mine_list_img_size"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="@dimen/line_height"
        android:background="@color/line_bg" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/addbyeasylink"
            android:layout_width="@dimen/chosbind_img_size"
            android:layout_height="@dimen/chosbind_img_size"
            android:src="@mipmap/choos_bind_code" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="@dimen/chosbind_padtb"
            android:paddingTop="@dimen/chosbind_padtb"
            android:text="@string/chos_bind_txt_addcode" />

        <View
            android:layout_width="@dimen/chosbind_line_width"
            android:layout_height="@dimen/chosbind_line_height"
            android:layout_marginBottom="@dimen/chosbind_line_padtb"
            android:layout_marginTop="@dimen/chosbind_line_padtb"
            android:background="@color/tab_bg" />

        <ImageView
            android:layout_width="@dimen/chosbind_img_size"
            android:layout_height="@dimen/chosbind_img_size"
            android:layout_marginTop="@dimen/chosbind_padtb"
            android:src="@mipmap/choos_bind_scan" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="@dimen/chosbind_padtb"
            android:paddingTop="@dimen/chosbind_padtb"
            android:text="@string/chos_bind_txt_scan" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/chos_bind_txt_scan_de"
            android:textColor="@color/c999" />
    </LinearLayout>

</LinearLayout>