<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="45dp"-->
        <!--android:background="#0E6DB0"-->
        <!--android:gravity="center"-->
        <!--android:orientation="vertical" >-->

        <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_gravity="center"-->
            <!--android:text="@string/app_name"-->
            <!--android:textColor="#ffffff"-->
            <!--android:textSize="20sp"-->
            <!--android:textStyle="bold" />-->
    <!--</LinearLayout>-->

    <FrameLayout
        android:id="@+id/flContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/tab_height"
        android:background="@color/tab_bg"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/llChat"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/ivChat"
                android:layout_width="@dimen/tab_img_size"
                android:layout_height="@dimen/tab_img_size"
                android:src="@mipmap/tab_01" />

            <TextView
                android:id="@+id/tvChat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_01"
                android:textColor="@drawable/tab_textview" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llFriends"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/ivFriends"
                android:layout_width="@dimen/tab_img_size"
                android:layout_height="@dimen/tab_img_size"
                android:src="@mipmap/tab_02" />

            <TextView
                android:id="@+id/tvFriends"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_02"
                android:textColor="@drawable/tab_textview" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llContacts"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/ivContacts"
                android:layout_width="@dimen/tab_img_size"
                android:layout_height="@dimen/tab_img_size"
                android:src="@mipmap/tab_03" />

            <TextView
                android:id="@+id/tvContacts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_03"
                android:textColor="@drawable/tab_textview" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llSettings"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/ivSettings"
                android:layout_width="@dimen/tab_img_size"
                android:layout_height="@dimen/tab_img_size"
                android:src="@mipmap/tab_04" />

            <TextView
                android:id="@+id/tvSettings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_04"
                android:textColor="@drawable/tab_textview" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>